# simple-icons-cli

./: .gitignore  README.md  apple.icns  pyproject.toml
Formula/: simple-icons.rb
src/simple_icons_cli/: __init__.py  main.py
