[project]
name = "simple-icons-cli"
version = "0.2.0"
description = "CLI for Simple Icons"
readme = "README.md"
authors = [
    { name = "Guracc", email = "garaccioni.andrea@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "cairosvg>=2.7.1",
    "pillow>=10.0.0",
    "prompt-toolkit>=3.0.52",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
simple-icons = "simple_icons_cli.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
